[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/BlueBalls.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BlueBall.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 586.014

[sub_resource type="CircleShape2D" id=2]
radius = 37.2156

[node name="BlueBall" type="Area2D"]
show_behind_parent = true
z_index = 2
collision_layer = 4
collision_mask = 2
space_override = 2
gravity_point = true
gravity = 0.0
script = ExtResource( 2 )

[node name="BlueBallShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="BlueBallSprite" type="Sprite" parent="."]
scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 1 )

[node name="HoverTime" type="Timer" parent="."]
wait_time = 3.0

[node name="BT" type="Timer" parent="."]
wait_time = 0.08
autostart = true

[node name="PurpleZone" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 128

[node name="PurpleZoneShape" type="CollisionShape2D" parent="PurpleZone"]
shape = SubResource( 2 )

[connection signal="timeout" from="HoverTime" to="." method="_on_HoverTime_timeout"]
[connection signal="timeout" from="BT" to="." method="_on_BT_timeout"]
[connection signal="area_entered" from="PurpleZone" to="." method="_on_PurpleZone_area_entered"]
